docs/syntax.ebnf
stations = function, { pipeline, function };

pipeline = '-', '>';

function = ( macro | identifier ), '(', { argument }, ')';

macro = identifier, '!';

identifier = ( letter | '_' | '+' | '-' | '*' | '/' | '>' | '<' | '=' | '?' | '!' ), { letter | '_' | '+' | '-' | '*' | '/' | '>' | '<' | '=' | '?' | '!' | digit }, ( letter | '_' | '+' | '-' | '*' | '/' | '>' | '<' | '=' | '?' | digit );

define_function = 'fun', identifier, '(', { parameter }, ')', 'do', stations, 'end';

condition = 'if', '(', function, ')', '{', stations, '}';

argument = boolean | nil | float | integer | relative_reference | variable | string | array | function | identifier | macro;

variable = identifier;

parameter = identifier;

relative_reference = { digit }, '_', { digit };

struct = 'struct', identifier, '{', { identifier, ':', identifier }, '}';

struct_instantiation = identifier, '{', { identifier, '=', argument }, '}';

field_access = variable, '.', identifier;

array = '[', { argument }, ']';

string = '"', { all_characters - '"' }, '"';

integer = [ '-' ], digit, { digit };

float = integer, '.', digit, { digit };

letter = lower | upper;

boolean = 'true' | 'false';

nil = 'nil';

special = '_' | '+' | '-' | '*' | '/' | '>' | '<' | '=' | '?' | '!';

lower = 'a' | 'b' | 'c' | 'd' | '...' | 'w' | 'x' | 'y' | 'z';

upper = 'A' | 'B' | 'C' | 'D' | '...' | 'W' | 'X' | 'Y' | 'Z';

digit = '0' | '1' | '...' | '9';
